# temperature-app

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  sensors.toml
dummy-data-loader/: Cargo.toml
dummy-data-loader/src/: main.rs
graphql-server/: Cargo.toml
graphql-server/src/: index.html  main.rs
temperature-app/: Cargo.toml
temperature-app/src/: database.rs  graphql.rs  lib.rs  temperature.rs
