[package]
name = "temperature-app"
version = "0.1.0"
authors = ["Bryan Burgers <bryan@burgers.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "^0.4.9", features = ["serde"] }
clap = "^2.33.0"
juniper = "^0.14.1"
juniper_warp = "*"
reqwest = "^0.9.22"
serde = "^1.0.102"
serde_json = "^1.0.41"
url = "^2.1.0"
warp = "*"
